# Nimata

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp  pool.cpp  pool_test.cpp  queue_test.cpp  test.cpp
include/: Chronometro.hpp  Nimata.hpp  Paleta.hpp
